# Agentic-AI

./: .gitignore  README.md
code_review_graph/: config.py
code_review_graph/graph/: query.py
docs/: CONFIG_TOML.md  CONSUMING_GRAPH.md  SETUP.md  config.toml.md  core_engine.md
mcp/: README.md
mcp/code-review-graph/: README.md  pyproject.toml
mcp/code-review-graph/code_review_graph/: __init__.py  cli.py
mcp/code-review-graph/docs/: CONFIG_TOML.md  cli.md  config.toml.md  development.md  mcp-tools.md  schema.md
mcp/code-review-graph/src/code_review_graph/: __init__.py  serve.py
mcp/code-review-graph/src/code_review_graph_mcp/: __init__.py
mcp/code-review-graph/tests/: test_languages.py
mcp/knowledge-graph/: .gitignore  README.md  pyproject.toml
mcp/knowledge-graph/app/: app.js  index.html  styles.css
mcp/knowledge-graph/src/knowledge_graph/: __init__.py  backend.py  cli.py  config.py  incremental.py  jobs.py  languages.py  parser.py  payloads.py  runtime.py  serve.py  server.py  storage.py  web.py
mcp/knowledge-graph/src/knowledge_graph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp/knowledge-graph/src/knowledge_graph/graph/: __init__.py  builder.py  query.py  storage.py
mcp/knowledge-graph/src/knowledge_graph/mcp/: __init__.py  __main__.py  backend.py  contracts.py  server.py
mcp/knowledge-graph/tests/: conftest.py  test_advanced_tools.py  test_config.py  test_graph_build.py  test_graph_navigation.py  test_languages.py  test_storage.py
mcp/knowledge-graph/tests/fixtures/sample_python_project/: _write_check.txt  config.toml
mcp/knowledge-graph/tests/fixtures/sample_python_project/examples/: check_app.py
mcp/vault/: .mcp.json  (+2 more)
skills/: README.md
tests/: test_advanced_tools.py  test_config.py
(+153 files in other folders)
