[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-graph"
version = "0.1.0"
description = "Core graph and incremental indexing engine for code review context."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",
  "tomli>=2.0.1; python_version < '3.11'",
  "tomli-w>=1.0.0",
]

[project.scripts]
crg = "code_review_graph.cli:main"
code-review-graph = "code_review_graph.cli:main"

[project.optional-dependencies]
test = ["pytest>=8.0"]
treesitter = ["tree-sitter>=0.21"]
embeddings = ["sentence-transformers>=3.0.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
